@@ -41,6 +41,6 @@ CREATE TABLE `ext_timetracking_active` (
 --
 
 CREATE TABLE `ext_project_taskpreset` (
-	`start_tracking` tinyint(1) unsigned NOT NULL default '0',
-	PRIMARY KEY (`id`)
+	`ext_timetracking_start_tracking` tinyint(1) unsigned NOT NULL default '0',
+	`ext_timetracking_workload_done` int(10) unsigned NOT NULL default '0'
 ) ENGINE=MyISAM  DEFAULT CHARSET=utf8;
