@@ -20,7 +20,7 @@
 
 TodoyuHookManager::registerHook('project', 'taskIcons', 'TodoyuTimetrackingManager::getTaskIcons');
 TodoyuHookManager::registerHook('project', 'taskinfo', 'TodoyuTimetrackingManager::addTimetrackingInfosToTask');
-TodoyuHookManager::registerHook('project', 'task.defaultData', 'TodoyuTimetrackingManager::setTaskDefaultData');
+TodoyuHookManager::registerHook('project', 'task.defaultData', 'TodoyuTimetrackingTaskManager::hookTaskDefaultData');
 
 	// Add timetracking infos to task infos: more time tracked than estimated? add marking CSS class
 TodoyuHookManager::registerHook('project', 'taskdata', 'TodoyuTimetrackingManager::addTimetrackingInfosToTaskInfos');
@@ -47,8 +47,6 @@ TodoyuTimetrackingCallbackManager::add('trackheadlet', 'TodoyuTimetrackingManage
 	// Extend project extconf and taskpreset in sysmanager
 TodoyuHookManager::registerHook('project', 'projectpresetdata', 'TodoyuTimetrackingManager::getProjectPresetDataAttributes');
 TodoyuFormHook::registerBuildForm('ext/project/config/form/extconf.xml', 'TodoyuTimetrackingExtManagerRenderer::onRenderProjectExtConfig');
-TodoyuFormHook::registerBuildForm('ext/project/config/form/admin/taskpreset.xml', 'TodoyuTimetrackingSysmanagerRenderer::onBuildFormTaskpreset');
-
-
+TodoyuFormHook::registerBuildForm('ext/project/config/form/admin/taskpreset.xml', 'TodoyuTimetrackingSysmanagerManager::hookBuildFormTaskPreset');
 
 ?>
