@@ -24,5 +24,4 @@
 	<label index="jumpToTask">Click here to jump to this task</label>
 	<label index="jumpToProject">Click here to jump to this project</label>
 	<label index="extconf.stopOnLogout">Stop time tracking when logging out</label>
-	<label index="taskpreset.start_tracking">Start Quicktask Timetracking?</label>
 </labels>
