@@ -1,0 +1,41 @@
+<?php
+/****************************************************************************
+ * todoyu is published under the BSD License:
+ * http://www.opensource.org/licenses/bsd-license.php
+ *
+ * Copyright (c) 2011, snowflake productions GmbH, Switzerland
+ * All rights reserved.
+ *
+ * This script is part of the todoyu project.
+ * The todoyu project is free software; you can redistribute it and/or modify
+ * it under the terms of the BSD License.
+ *
+ * This script is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the BSD License
+ * for more details.
+ *
+ * This copyright notice MUST APPEAR in all copies of the script.
+ *****************************************************************************/
+
+/**
+ * Timetracking project manager
+ *
+ * @package		Todoyu
+ * @subpackage	Timetracking
+ */
+class TodoyuTimetrackingProjectManager {
+
+	/**
+	 * Get timetracking project
+	 *
+	 * @param	Integer		$idProject
+	 * @return	TodoyuTimetrackingProject
+	 */
+	public static function getProject($idProject) {
+		return TodoyuRecordManager::getRecord('TodoyuTimetrackingProject', $idProject);
+	}
+
+}
+
+?>
